<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/record_date"
        android:layout_width="wrap_content"
        android:text="Fecha"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/comentario_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/record_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="bien"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edit_text_bg"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />


    <TextView
        android:id="@+id/tvHoraEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/hora_entrada_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/enter_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10 00 AM"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvComidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/comidas_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/menu_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/meal_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pollo con papas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edit_text_bg"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/meal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dejó todo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvEvacuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/evacuaciones_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/evacuation_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvMicciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/micciones_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/urination_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvCambiosRopa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Cambios de ropa"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/clothes_change_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvIncidenciasC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/incidencias_clase_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/class_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ninguna"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edit_text_bg"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvIncidenciasM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/incidencias_medicas_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/medic_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ninguna"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/edit_text_bg"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />



    <TextView
        android:id="@+id/tvHoraSalida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Hora_salida_label"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/exit_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="04 00 PM"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

</LinearLayout>
