<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:padding="16dp"
    tools:context=".TeacherActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/date_spinner_prompt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



        <EditText
            android:id="@+id/announcementEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/announcement_hint"
            android:textColor="@color/black"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/postAnnouncementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accent_color"
            android:text="@string/post_announcement"
            android:textColor="@color/primary_text_color" />

    </LinearLayout>
</ScrollView>
